Fix iOS device layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,11 @@ p {
 footer p {
   text-align: center;
 }
+
+@media (max-width: 480px) {
+  
+  .hero-unit {
+    padding: 10px;
+  }
+
+}
